--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     testImplementation 'org.springframework.batch:spring-batch-test'
 
     // testcontainers
-    testImplementation 'org.testcontainers:spock:1.17.6'
+    testImplementation 'org.testcontainers:junit-jupiter:1.16.0'
     testImplementation 'org.testcontainers:mysql:1.17.6'
 }
 
