--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
-    url: jdbc:tc:mysql:8:///?user=test&password=test
+    url: jdbc:tc:mysql:8:///?&user=test&password=test&TC_INITSCRIPT=file:src/test/resources/init-batch.sql
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
@@ -12,4 +12,6 @@ spring:
         format_sql: true
         show_sql: true
 
-
+  batch: #TODO
+    job.name: ${job.name:NONE}
+    chunk-size: 1000
