--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
+        default_batch_fetch_size: 1000
         format_sql: true
     hibernate:
       ddl-auto: create
