--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/pass_local?zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-    username: pass_local_user
-    password: passlocal123
-    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://127.0.0.1:3306/pass_local?zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+#    username: pass_local_user
+#    password: passlocal123
+#    driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
+      jdbc-url: jdbc:mysql://127.0.0.1:3306/pass_local?zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+      username: pass_local_user
+      password: passlocal123
+      driver-class-name: com.mysql.cj.jdbc.Driver
       maximum-pool-size: 20
 
   batch: #TODO
@@ -21,4 +25,4 @@ spring:
         default_batch_fetch_size: 1000
         format_sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
