--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   datasource:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
     url: jdbc:tc:mysql:8:///?&user=test&password=test&TC_INITSCRIPT=file:src/test/resources/init-batch.sql
+    hikari:
+      leak-detection-threshold: 2000
+      maximum-pool-size: 30
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
