--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api' // java.lang.NoClassDefFoundError (javax.annotation.Generated) 대응 코드
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api' // java.lang.NoClassDefFoundError (javax.annotation.Entity) 대응 코드
 
+    testImplementation 'org.jeasy:easy-random-core:5.0.0'
+
     // testcontainers
     testImplementation 'org.testcontainers:junit-jupiter:1.16.0'
     testImplementation 'org.testcontainers:mysql:1.17.6'
