--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,10 +1,15 @@
 spring:
   datasource:
+#    url: jdbc:mysql://127.0.0.1:3306/pass_local?rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+#    username: pass_local_user
+#    password: passlocal123
+#    driver-class-name: com.mysql.cj.jdbc.Driver
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
     url: jdbc:tc:mysql:8:///?&user=test&password=test&TC_INITSCRIPT=file:src/test/resources/init-batch.sql
     hikari:
-      leak-detection-threshold: 2000
       maximum-pool-size: 30
+      max-lifetime: 28790
+
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
