--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        format_sql: true
+#        format_sql: true
         show_sql: true
         default_batch_fetch_size: 1000
 
