--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 spring:
   datasource:
-#    url: jdbc:mysql://127.0.0.1:3306/pass_local?zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-#    username: pass_local_user
-#    password: passlocal123
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-    hikari:
-      jdbc-url: jdbc:mysql://127.0.0.1:3306/pass_local?zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-      username: pass_local_user
-      password: passlocal123
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      maximum-pool-size: 20
-      max-lifetime: 28800
+    url: jdbc:mysql://127.0.0.1:3306/wookpay?zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    username: root
+    password: rootpassword
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#    hikari:
+#      jdbc-url: jdbc:mysql://127.0.0.1:3306/wookpay?zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+#      username: root
+#      password: rootpassword
+#      driver-class-name: com.mysql.cj.jdbc.Driver
+#      maximum-pool-size: 20
+#      max-lifetime: 28800
 
   batch: #TODO
     jdbc:
@@ -26,4 +26,4 @@ spring:
         default_batch_fetch_size: 1000
         format_sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
