--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -17,6 +17,8 @@ spring:
     show-sql: true
     properties:
       hibernate:
+        query:
+          fail_on_pagination_over_collection_fetch: false
 #        format_sql: true
         show_sql: true
         default_batch_fetch_size: 1000
